<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * MIT License
  ~  *
  ~  * Copyright (c) [2017] [velli20]
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:robototext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_credit_card_description_input_field"
        style="@style/NewEntryInputField.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_entry_description"
        android:inputType="textCapSentences"
        android:singleLine="true"
        app:met_maxCharacters="20">

        <requestFocus />
    </com.rengwuxian.materialedittext.MaterialEditText>

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/new_credit_card_card_type_title"
        style="@style/NewEntryHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_credit_card_card_type"
        robototext:style="regular" />

    <Spinner
        android:id="@+id/new_credit_card_card_type"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="2dp" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/new_credit_card_card_number_field"
        style="@style/NewEntryInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_credit_card_card_number"
        android:inputType="number"
        app:met_helperText="@string/new_credit_card_card_number_helper_text"
        app:met_helperTextAlwaysShown="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/new_credit_card_expiration_date_field"
            style="@style/NewEntryInputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ems="10"
            android:hint="@string/new_credit_card_expiration_date"
            android:inputType="textUri"
            app:met_helperText="@string/new_credit_card_expiration_date_helper_text"
            app:met_helperTextAlwaysShown="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/new_credit_card_security_code_field"
            style="@style/NewEntryInputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:ems="10"
            android:hint="@string/new_credit_card_security_code"
            android:inputType="number"
            app:met_helperText="@string/new_credit_card_security_code_helper_text"
            app:met_helperTextAlwaysShown="true" />
    </LinearLayout>

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/new_credit_card_title_group"
        style="@style/NewEntryHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_group"
        robototext:style="regular" />

    <Spinner
        android:id="@+id/new_credit_card_group_spinner"
        style="@style/NewEntrySpinnerField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <com.velli.passwordmanager.roboto.RobotoButton
        android:id="@+id/new_credit_card_button_new_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:alpha="0.87"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_action_new_group"
        android:drawablePadding="16dp"
        android:drawableStart="@drawable/ic_action_new_group"
        android:gravity="left|start|center_vertical"
        android:text="@string/action_create_new_group"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        robototext:style="regular"
        tools:ignore="RtlHardcoded" />

</LinearLayout>