<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~  * MIT License
  ~  *
  ~  * Copyright (c) [2017] [velli20]
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:appcompat="http://schemas.android.com/apk/res-auto"
    appcompat:showAsAction="ifRoom">
    <item
        android:id="@+id/menu_share_password"
        android:icon="@drawable/ic_action_share"
        android:title="@string/menu_action_share_password"
        appcompat:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_share_email"
                android:title="@string/menu_action_share_email" />
            <item
                android:id="@+id/menu_share_screenshot"
                android:title="@string/menu_action_share_screenshot" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_view_hide_password"
        android:icon="@drawable/ic_action_view"
        android:title="@string/menu_action_view_password"
        appcompat:showAsAction="ifRoom"></item>


</menu>
