<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * MIT License
  ~  *
  ~  * Copyright (c) [2017] [velli20]
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy
  ~  * of this software and associated documentation files (the "Software"), to deal
  ~  * in the Software without restriction, including without limitation the rights
  ~  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~  * copies of the Software, and to permit persons to whom the Software is
  ~  * furnished to do so, subject to the following conditions:
  ~  *
  ~  * The above copyright notice and this permission notice shall be included in all
  ~  * copies or substantial portions of the Software.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~  * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~  * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~  * SOFTWARE.
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:robototext="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_info_container"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical" >
    
    <View
        android:id="@+id/details_view_login_type_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.12"
        android:background="#000000" />



    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_url_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_entry_url" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_url"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        robototext:scrollable="true" />
    
    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_wifi_security_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_entry_wifi_security"
        android:visibility="gone" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_wifi_security"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        robototext:scrollable="true" 
        android:visibility="gone" />
    
    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_wifi_ssid_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_entry_wifi_ssid"
        android:visibility="gone"  />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_wifi_ssid"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        robototext:scrollable="true" 
        android:visibility="gone" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_username_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_username" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_username"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        robototext:scrollable="true" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_password_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_password" />

     <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:inputType="textPassword" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_notes_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_notes" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_notes"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_group_title"
        style="@style/DetailsViewSubHeader"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry_group" />

    <com.velli.passwordmanager.roboto.RobotoTextView
        android:id="@+id/details_view_group"
        style="@style/DetailsViewDetail"
        robototext:style="regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>